--- a/staff/templates/staff/home.html
+++ b/staff/templates/staff/home.html
@@ -1,3 +1,9 @@
 <html>
 	<p>Hi there</p>
+    {%for building in buildings%}
+    <div>
+        <h1>{{building.name}}</h1>
+    </div>
+    
+    {% endfor %}
 </html>
