--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -19,6 +19,7 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/students/home/starter-template.css" rel="stylesheet">
+    <link href="/static/students/building_dashboard/dashboard.css" rel="stylesheet">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -53,18 +54,16 @@
     <div class="row-offcanvas row-offcanvas-left">
       <div id="sidebar" class="sidebar-offcanvas">
           <div class="col-md-12">
-            <h3>Sidebar (fixed)</h3>
+            <h3>Open Buildings</h3>
             <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
+              {% for building in buildings %}
+                {% url 'building-view' building.name as building_url %}
+                {% if building.name == current_building.name %}
+                   <li class="active"><a href="{{building_url}}">{{building}}</a></li>
+                {% else %}
+                    <li class="#"><a href="{{building_url}}">{{building}}</a></li>
+                {% endif %}
+             {% endfor %}
             </ul>
           </div>
       </div>
@@ -73,57 +72,64 @@
               <p class="visible-xs">
                 <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left"></i></button>
               </p>
-              <h2>Fixed + Fluid Bootstrap Template with Off-canvas Sidebar</h2>
+              <h2>{{building.name}}</h2>
               <div class="row">
-                  <div class="col-md-12"><div class="well"><p>Shrink the browser width to make the sidebar collapse off canvase.</p></div></div>
-              </div>
-              <div class="row">
-                  <div class="col-md-4"><div class="well"><p>4 cols</p></div></div>
-                  <div class="col-md-4"><div class="well"><p>4 cols</p></div></div>
-                  <div class="col-md-4"><div class="well"><p>4 cols</p></div></div>
-              </div>
-              <div class="row">
-                  <div class="col-lg-6 col-sm-6"><div class="well"><p>6 cols, 6 small cols</p></div></div>
-                  <div class="col-lg-6 col-sm-6"><div class="well"><p>6 cols, 6 small cols</p></div></div>
-              </div>
-              <div class="row">
-                  <div class="col-lg-4 col-sm-6"><div class="well">4 cols, 6 small cols</div></div>
-                  <div class="col-lg-4 col-sm-6"><div class="well">4 cols, 6 small cols</div></div>
-                  <div class="col-lg-4 col-sm-12"><div class="well">4 cols, 12 small cols</div></div>
+                  <div class="col-md-12"><div class="well"><h4>Total rooms: {{building.total_rooms}}</h4></div></div>
               </div>
           </div>
-      </div>
+          
+      <!-- table of open rooms -->
+      <div class="col-md-6 col-xs-12">
+        <h2 class="sub-header">All Open Rooms</h2>
+          <div class="table-responsive">
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Room #</th>
+                  <th>Room Type</th>
+                  <th>Open Beds</th>
+                  <th>Pulls</th>
+                  <th>Notes</th>
+                </tr>
+              </thead>
+              <tbody>
+                {% for room in rooms %}
+                <tr>
+                  <td>{{room.number}}</td>
+                  <td>
+                  {% if room.total_beds == 1 %}
+                    Single
+                  {% elif room.total_beds == 2 %}
+                    Double
+                  {% elif room.total_beds == 3 %}
+                    Triple
+                  {% elif room.total_beds == 4 %}
+                    Quad
+                  {% else %}
+                    N/A
+                  {% endif %}
+                  </td>
+                  <td>{{room.available_beds}}</td>
+                  <td>
+                    {% if room.pull %}
+                      {{room.pull}}
+                    {% else %}
+                      None
+                    {% endif %}
+                  </td>
+                  <td>{{room.notes}}</td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div><!--table of rooms-->    
+      </div><!--/first half of screen-->
+        
+    <!-- floor plans -->
+    <div class="col-md-6 col-xs-12">
+        <img id="floor_plan" class="img-responsive floor-plan-img" id="zoom_01" src="/static/students/floor_plans/images/small/{{current_building.name}}.jpg" data-zoom-image="/static/students/floor_plans/images/large/{{current_building.name}}.jpg"/>
+    </div><!--/floor plans-->
     </div><!--/row-offcanvas -->
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Site Name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Welcome to the Subfree Lottery</h1>
-        <p class="lead">Select a building from the left navigation to view room availability by dorm.</p>
-      </div>
-
-    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -136,5 +142,13 @@
     <script src="/static/students/assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- Script for collapsable side navigation -->
     <script src="/static/students/home/home-sidebar.js"></script>
+    <!-- Script for Zoom JQuery Plugin -->
+    <script src="/static/students/assets/js/zoom/jquery.elevateZoom-3.0.8.min.js" type="text/javascript"></script>
+    <script>
+        $("#floor_plan").elevateZoom({
+            zoomType: "inner",
+            cursor: "crosshair"
+        });
+    </script>
   </body>
 </html>
