--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -78,6 +78,17 @@
               </div>
           </div>
           
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Floor
+            <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+              <li><a href="#">All Floors</a></li>
+              <li><a href="#">First Floor</a></li>
+              <li><a href="#">Second Floor</a></li>
+              <li><a href="#">Thrid Floor</a></li>
+            </ul>
+        </div>
+          
       <!-- table of open rooms -->
       <div class="col-md-6 col-xs-12">
         <h2 class="sub-header">All Open Rooms</h2>
