--- a/staff/templates/staff/LotteryNumberInput.html
+++ b/staff/templates/staff/LotteryNumberInput.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Staff Homepage</title>
+    <title>Lottery Number Input</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/staff/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -46,24 +46,26 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="home">Home</a></li>
             <li><a href="RoomSelect">Room Selection</a></li>
-            <li><a href="LotteryNumber">Number Input</a></li>
+            <li class="active"><a href="#">NumberInput</a></li>
           </ul>
-    	  <ul class="nav navbar-nav navbar-right">
-	    <li><a>Current Number: {{ LotteryNumber }}</a></li>
-	  </ul>
-    	</div><!--/.nav-collapse -->
+        </div><!--/.nav-collapse -->
       </div>
     </nav>
 
     <div class="container">
 
       <div class="starter-template">
-        <h1>Welcome to the Lottery Staff Homepage</h1>
-	<p class="lead">Select one of the options above to start</p>
+        <h1>Input the Next Lottery Number</h1>
+	<p class="lead">Current Number: {{ LotteryNumber }}</p>
+	<form method="POST" class="post-form">{% csrf_token %}
+	{{form.as_p}}
+	<button type="submit" class="save btn btn-default">Save</button>
+	</form>
       </div>
 
+		
     </div><!-- /.container -->
 
 
