--- a/staff/templates/staff/RoomSelect.html
+++ b/staff/templates/staff/RoomSelect.html
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Staff Homepage</title>
+    <title>Room Selection</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/staff/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -46,8 +46,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="RoomSelect">Room Selection</a></li>
+            <li><a href="home">Home</a></li>
+            <li class="active"><a href="#">Room Selection</a></li>
             <li><a href="LotteryNumber">Number Input</a></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
@@ -60,8 +60,12 @@
     <div class="container">
 
       <div class="starter-template">
-        <h1>Welcome to the Lottery Staff Homepage</h1>
-	<p class="lead">Select one of the options above to start</p>
+        <h1>Welcome to Room Selection</h1>
+	<p class="lead">Please enter student information to get started...</p>
+	<form method="POST" class="post-form">{% csrf_token %}
+	{{form.as_p}}
+	<button type="submit" class="save btn btn-default">Save</button>
+	</form>
       </div>
 
     </div><!-- /.container -->
