--- a/staff/templates/staff/RoomSelect.html
+++ b/staff/templates/staff/RoomSelect.html
@@ -61,7 +61,7 @@
 
       <div class="starter-template">
         <h1>Welcome to Room Selection</h1>
-	<p class="lead">Please enter student information to get started...</p>
+	<p class="lead">{{ HeaderText }}</p>
 	<form method="POST" class="post-form">{% csrf_token %}
 	{{form.as_p}}
 	<button type="submit" class="save btn btn-default">Save</button>
