--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -53,77 +53,35 @@
     <div class="row-offcanvas row-offcanvas-left">
       <div id="sidebar" class="sidebar-offcanvas">
           <div class="col-md-12">
-            <h3>Sidebar (fixed)</h3>
+            <h3>Open Buildings</h3>
             <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
-              <li><a href="#">Section</a></li>
+              {% for building in buildings %}
+                {% url 'building-view' building.name as building_url %}
+                {% if building.name == current_building.name %}
+                   <li class="active"><a href="{{building_url}}">{{building}}</a></li>
+                {% else %}
+                    <li class="#"><a href="{{building_url}}">{{building}}</a></li>
+                {% endif %}
+             {% endfor %}
             </ul>
           </div>
       </div>
       <div id="main">
-          <div class="col-md-12">
-              <p class="visible-xs">
-                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left"></i></button>
-              </p>
-              <h2>Fixed + Fluid Bootstrap Template with Off-canvas Sidebar</h2>
-              <div class="row">
-                  <div class="col-md-12"><div class="well"><p>Shrink the browser width to make the sidebar collapse off canvase.</p></div></div>
+          <div class="container">
+              <div class="col-md-12">
+                <h1>Welcome to the Subfree Lottery</h1>
+                <p class="lead">Select a building from the left navigation to view room availability by dorm</p>
               </div>
-              <div class="row">
-                  <div class="col-md-4"><div class="well"><p>4 cols</p></div></div>
-                  <div class="col-md-4"><div class="well"><p>4 cols</p></div></div>
-                  <div class="col-md-4"><div class="well"><p>4 cols</p></div></div>
-              </div>
-              <div class="row">
-                  <div class="col-lg-6 col-sm-6"><div class="well"><p>6 cols, 6 small cols</p></div></div>
-                  <div class="col-lg-6 col-sm-6"><div class="well"><p>6 cols, 6 small cols</p></div></div>
-              </div>
-              <div class="row">
-                  <div class="col-lg-4 col-sm-6"><div class="well">4 cols, 6 small cols</div></div>
-                  <div class="col-lg-4 col-sm-6"><div class="well">4 cols, 6 small cols</div></div>
-                  <div class="col-lg-4 col-sm-12"><div class="well">4 cols, 12 small cols</div></div>
+              <div class="container col-md-12" style="background-color: #f1f1f1; padding-left: 20px;">
+                  <h3>Tweets by @HamiltonResLife</h3>
+                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Three Carnegie quads left for women!</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724331042987991041">April 24, 2016</a></blockquote>
+                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The only singles that are left are those in the Bundys.</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724328403101466626">April 24, 2016</a></blockquote>
+                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">No more singles in McIntosh or Minor</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724327636336533504">April 24, 2016</a></blockquote>
+                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Eells is closed</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724323731133358081">April 24, 2016</a></blockquote>
               </div>
           </div>
       </div>
     </div><!--/row-offcanvas -->
-
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Site Name</a>
-        </div>
-        <div id="navbar" class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-
-    <div class="container">
-
-      <div class="starter-template">
-        <h1>Welcome to the Subfree Lottery</h1>
-        <p class="lead">Select a building from the left navigation to view room availability by dorm.</p>
-      </div>
-
-    </div><!-- /.container -->
 
 
     <!-- Bootstrap core JavaScript
@@ -136,5 +94,9 @@
     <script src="/static/students/assets/js/ie10-viewport-bug-workaround.js"></script>
     <!-- Script for collapsable side navigation -->
     <script src="/static/students/home/home-sidebar.js"></script>
+      
+    <!-- Twitter Timeline
+    ================================================== -->
+    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
   </body>
 </html>
