--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -33,59 +33,33 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Site Name</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-    </div><!--/.navbar -->
+    {% include "students/header.html" %}
 
     <div class="row-offcanvas row-offcanvas-left">
-      <div id="sidebar" class="sidebar-offcanvas">
-          <div class="col-md-12">
-            <h3>Open Buildings</h3>
-            <ul class="nav nav-pills nav-stacked">
-              {% for building in buildings %}
-                {% url 'building-view' building.name as building_url %}
-                {% if building.name == current_building.name %}
-                   <li class="active"><a href="{{building_url}}">{{building}}</a></li>
-                {% else %}
-                    <li class="#"><a href="{{building_url}}">{{building}}</a></li>
-                {% endif %}
-             {% endfor %}
-            </ul>
-          </div>
-      </div>
+      {% include "students/sidebar.html" %}
+        
       <div id="main">
           <div class="col-md-12">
-              <p class="visible-xs">
-                <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas"><i class="glyphicon glyphicon-chevron-left"></i></button>
-              </p>
               <h2>{{building.name}}</h2>
               <div class="row">
-                  <div class="col-md-12"><div class="well"><h4>Total rooms: {{building.total_rooms}}</h4></div></div>
-              </div>
+                  <div class="col-md-12">
+                    <div class="well">
+                        <h4>Total rooms: {{building.total_rooms}}</h4>
+                    </div><!--/well-->
+                  </div>
+              </div><!--/row-->
           </div>
           
-        <div class="dropdown">
-            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Floor<span class="caret"></span></button>
-            <ul class="dropdown-menu">
-              <li><a href="#">All Floors</a></li>
-              <li><a href="#">Floor One</a></li>
-              <li><a href="#">Floor Two/a></li>
-              <li><a href="#">Floor Three</a></li>
-            </ul>
+        <div class="col-md-12">
+            <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Floor<span class="caret"></span></button>
+                <ul class="dropdown-menu">
+                  <li><a href="#">All Floors</a></li>
+                  <li><a href="#">Floor One</a></li>
+                  <li><a href="#">Floor Two/a></li>
+                  <li><a href="#">Floor Three</a></li>
+                </ul>
+            </div>
         </div>
           
       <div class="col-md-6 col-xs-12">
