--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -32,47 +32,18 @@
   </head>
 
   <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#">Site Name</a>
-        </div>
-        <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-    </div><!--/.navbar -->
+    {% include "students/header.html" %}
 
     <div class="row-offcanvas row-offcanvas-left">
-      <div id="sidebar" class="sidebar-offcanvas">
-          <div class="col-md-12">
-            <h3>Open Buildings</h3>
-            <ul class="nav nav-pills nav-stacked">
-              {% for building in buildings %}
-                {% url 'building-view' building.name as building_url %}
-                {% if building.name == current_building.name %}
-                   <li class="active"><a href="{{building_url}}">{{building}}</a></li>
-                {% else %}
-                    <li class="#"><a href="{{building_url}}">{{building}}</a></li>
-                {% endif %}
-             {% endfor %}
-            </ul>
-          </div>
-      </div>
+      {% include "students/sidebar.html" %}
+    
       <div id="main">
           <div class="container">
               <div class="col-md-12">
                 <h1>Welcome to the Subfree Lottery</h1>
                 <p class="lead">Select a building from the left navigation to view room availability by dorm</p>
               </div>
-              <div class="container col-md-12" style="background-color: #f1f1f1; padding-left: 20px;">
+              <div class="container col-md-12" style="background-color: #f1f1f1; padding: 20px;">
                   <h3>Tweets by @HamiltonResLife</h3>
                   <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Three Carnegie quads left for women!</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724331042987991041">April 24, 2016</a></blockquote>
                   <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The only singles that are left are those in the Bundys.</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724328403101466626">April 24, 2016</a></blockquote>
