Fixed issue where you trying to navigate using the top bar in the middle of room selection causes an error

--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -11,8 +11,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="RoomSelect">Room Selection</a></li>
-            <li><a href="LotteryNumber">Number Input</a></li>
+            <li><a href="/staff/RoomSelect">Room Selection</a></li>
+            <li><a href="/staff/LotteryNumber">Number Input</a></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
 	       <li><a>Current Number: {{ LotteryNumber }}</a></li>
