Made some changes to building & home pages - cleaned up buttons/changed table/made twitter timeline a real timeline (some bugs still)

--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -42,13 +42,13 @@
                     <h1>Welcome to the Subfree Lottery</h1>
                     <p class="lead">Select a building from the left navigation to view room availability by dorm</p>
               </div>
-              <div class="container col-md-12">
-                  <hr>
-                  <h3>Tweets by @HamiltonResLife</h3>
-                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Three Carnegie quads left for women!</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724331042987991041">April 24, 2016</a></blockquote>
-                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">The only singles that are left are those in the Bundys.</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724328403101466626">April 24, 2016</a></blockquote>
-                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">No more singles in McIntosh or Minor</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724327636336533504">April 24, 2016</a></blockquote>
-                  <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Eells is closed</p>&mdash; Hamilton ResLife (@HamiltonResLife) <a href="https://twitter.com/HamiltonResLife/status/724323731133358081">April 24, 2016</a></blockquote>
+              <div class="col-md-12">
+                  <div class="container">
+                        <a class="twitter-timeline"
+                        href="https://twitter.com/HamiltonResLife">
+                        Tweets by @HamiltonResLife
+                        </a>
+                  </div>
               </div>
           </div>
       </div>
@@ -68,6 +68,8 @@
       
     <!-- Twitter Timeline
     ================================================== -->
-    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <script src="/static/students/assets/js/twitter-timeline.js"></script>
+                                                            
+
   </body>
 </html>
