--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -41,7 +41,9 @@
         
       <div id="main">
           <div class="col-md-12">
-              <h1>{{current_building.name}}</h1>
+              <div class="centered-div">
+                    <h1>{{current_building.name}}</h1>
+              </div>
               <div class="row">
                   
                   <!-- Rooms Left -->
@@ -80,31 +82,30 @@
                   </div>
                 
               </div><!--/row-->
+              <hr>
           </div><!--/col-md-12
+          
+      <!-- first half of page - room list -->
+      <div class="col-md-6 col-xs-12">
           
         <!-- filter by floor dropdown available if there are rooms left -->
         {% if rooms %}
-        <div class="col-md-12">
-            <div class="dropdown">
-                <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Floor <span class="caret"></span></button>
-                <ul class="dropdown-menu">
-                    <li><a href="#">All Floors</a></li>
-                    {% for floor in floors %}
-                    <li><a href="#">Floor {{floor}}</a></li>
-                    {% endfor %}
-                </ul>
-            </div>
+        <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Select Floor <span class="caret"></span></button>
+            <ul class="dropdown-menu">
+                <li><a href="#">All Floors</a></li>
+                {% for floor in floors %}
+                <li><a href="#">Floor {{floor}}</a></li>
+                {% endfor %}
+            </ul>
         </div>
         {% endif %}
           
-      <!-- first half of room -->
-      <div class="col-md-6 col-xs-12">
-          
         <!-- table of all open rooms -->
         {% if rooms %}
-        <h2 class="sub-header">Open Rooms</h2>
+        <h2>Open Rooms</h2>
           <div class="table-responsive">
-            <table class="table table-striped">
+            <table class="table table-hover">
               <thead>
                 <tr>
                   <th>Room #</th>
@@ -149,6 +150,9 @@
             <h3>There are currently no available rooms</h3>
           {% endif %}
       </div><!--/first half of screen-->
+          
+    <!-- horizontal line visible on smaller screens to divide floor plans and open room list -->
+    <div class="hidden-lg hidden-md col-md-12"><hr></div>
         
     <!-- second half of screen (floor plans) -->
     <div class="col-md-6 col-xs-12">
@@ -167,6 +171,8 @@
                 {% endfor %}
             </ul>
         </div>
+        
+        <h2>{{first_floorplan.display_name}}</h2>
 
         <!-- floor plan image -->
         {% if first_floorplan != None %}
