Added a room review page to allow for editing of rooms

--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -13,6 +13,8 @@
           <ul class="nav navbar-nav">
             <li><a href="/staff/RoomSelect">Room Selection</a></li>
             <li><a href="/staff/LotteryNumber">Number Input</a></li>
+            <li><a href="/staff/ReviewRoom">Review a Room</a
+            ></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
 	       <li><a>Current Number: {{ LotteryNumber }}</a></li>
