--- a/staff/templates/staff/StudentInfo.html
+++ b/staff/templates/staff/StudentInfo.html
@@ -33,19 +33,51 @@
 
   <body>
     {% include "staff/header.html" %}
-      
     <div class="container">
-
       <div class="starter-template">
         <h1>Welcome to Room Selection</h1>
 	<p class="lead">{{ HeaderText }}</p>
 	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
+	   <div class="row">
+		   <div class="col-md-6">
+			   <div class="panel">
+				<h2> Input information for First Room</h2>
+				{% for field in baseForm.visible_fields %}
+				<p>
+				{{ field.label_tag }} {{ field }}
+				</p>
+				{% endfor %}
+				{% for field in baseForm.hidden_fields %}
+				<p>
+				 {{ field }}
+				</p>
+				{% endfor %}
+			   </div>
+			</div>
+		<div class="col-md-6">
+			<div class="panel">
+			<h2> Input information for Next Room</h2>
+			{% for field in additionalForm.visible_fields %}
+			{% if forloop.counter0 == 0 %}
+			<p>
+			{{ field.label_tag }} {{ field }}
+			</p>
+			{% else %}	
+			<p class=PullFields>
+			{{ field.label_tag }} {{ field }}
+			</p>
+			{% endif %}
+			{% endfor %}
+			
+			{% for field in additionalForm.hidden_fields %}
+			<p class=PullFields>
+			{{ field }}
+			</p>
+			{% endfor %}
+			</div>
 
-	{% for field in form %}
-	<p>
-		{{ field.label_tag }} {{ field }}
-	</p>
-	{% endfor %}
+		</div>
+	   </div>
 	<button type="submit" class="save btn btn-default">Save</button>
 	</form>
       </div>
@@ -60,6 +92,7 @@
     <script>window.jQuery || document.write('<script src="/static/staff/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/static/staff/RoomSelect/togglePullForm.js"></script>
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
