Accidentally had two id's on the full size floor plan image.

--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -167,7 +167,7 @@
             <h2 id="floorPlanName">{{ first_image.display_name }}</h2>
         
             <!-- floor plan image -->
-            <img id="fullFloorPlan" class="img-responsive floor-plan-img" id="zoom_01" src="{{ first_image.image.url }}" data-zoom-image="{{first_image.image.url}}"/>
+            <img id="fullFloorPlan" class="img-responsive floor-plan-img" src="{{ first_image.image.url }}" data-zoom-image="{{first_image.image.url}}"/>
         {% endwith %}
         {% endif %}
         
