--- a/staff/templates/staff/RoomSelect.html
+++ b/staff/templates/staff/RoomSelect.html
@@ -40,12 +40,11 @@
         <h1>Welcome to Room Selection</h1>
 	<p class="lead">{{ HeaderText }}</p>
 	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
-
 	{% for field in form %}
-	<p>
-		{{ field.label_tag }} {{ field }}
+		<p> {{field.label}} {{field}}</p>
+	{% endfor %}	
+	
 	</p>
-	{% endfor %}
 	<button type="submit" class="save btn btn-default">Save</button>
 	</form>
       </div>
@@ -60,6 +59,7 @@
     <script>window.jQuery || document.write('<script src="/static/staff/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/static/staff/RoomSelect/buildingRoomsFilter.js"></script>
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
