--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
             <span class="sr-only">Toggle navigation</span>
@@ -13,11 +13,16 @@
           <ul class="nav navbar-nav">
             <li><a href="/staff/RoomSelect">Room Selection</a></li>
             <li><a href="/staff/LotteryNumber">Number Input</a></li>
-            <li><a href="/staff/ReviewRoom">Review a Room</a
-            ></li>
+            <li><a href="/staff/ReviewRoom">Review a Room</a></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
-	       <li><a>Current Number: {{ LotteryNumber }}</a></li>
+              <li class="navbar-text">
+                  <a>
+                    {% if LotteryNumber %}
+                        Next Up: {{ LotteryNumber }}
+                    {% endif %}
+                  </a>
+              </li>
 	      </ul>
     	</div><!--/.nav-collapse -->
     </div>
