--- a/students/templates/students/header.html
+++ b/students/templates/students/header.html
@@ -1,5 +1,5 @@
 <nav role="navigation" class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         
         <!-- Site Name -->
         <div class="navbar-header pull-left" style="padding-left: 5px;">
