--- a/staff/templates/staff/header.html
+++ b/staff/templates/staff/header.html
@@ -13,14 +13,15 @@
           <ul class="nav navbar-nav">
             <li><a href="/staff/RoomSelect">Room Selection</a></li>
             <li><a href="/staff/LotteryNumber">Number Input</a></li>
-            <li><a href="/staff/ReviewRoom">Review a Room</a></li>
+            <li><a href="/staff/ReviewRoom">Review a Room</a
+            ></li>
           </ul>
     	  <ul class="nav navbar-nav navbar-right">
-              <li class="navbar-text">
+              <li>
                   <a>
                     {% if LotteryNumber %}
                         Next Up: {{ LotteryNumber }}
-                    {% endif %}
+                    {% endif %} 
                   </a>
               </li>
 	      </ul>
