Added a filter on the building sidebar

--- a/students/templates/students/building.html
+++ b/students/templates/students/building.html
@@ -96,7 +96,6 @@
                   </div>
                 
               </div><!--/row-->
-              <hr>
           </div><!--/col-md-12
           
       <!-- first half of page - room list -->
@@ -274,5 +273,7 @@
     <script src="/static/students/building/thumbnail.js"></script>
     <!-- Script for dropdown apartments -->
     <script src="/static/students/building/dropdown-table.js"></script>
+    <!-- Script for filtering building sidebar -->
+    <script src="/static/students/building/sidebar-filter.js"></script>
   </body>
 </html>
