--- a/students/templates/students/sidebar.html
+++ b/students/templates/students/sidebar.html
@@ -1,7 +1,10 @@
 <div id="sidebar" class="sidebar-offcanvas">
     <div class="col-md-12">
-        <h3>Open Buildings</h3>
-        <ul class="nav nav-pills nav-stacked">
+        <h3 id="sidebar-title">Open Buildings</h3>
+        <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search" onkeyup="buildingFilter(this)" />
+        </div>
+        <ul class="nav nav-pills nav-stacked" id="building-sidebar">
             {% for building in buildings %}
                 {% url 'building-view' building.name as building_url %}
                 {% if building.name == current_building.name %}
