--- a/students/templates/students/home.html
+++ b/students/templates/students/home.html
@@ -19,6 +19,9 @@
 
     <!-- Custom styles for this template -->
     <link href="/static/students/home/starter-template.css" rel="stylesheet">
+      
+    <!-- CSS for this page -->
+    <link rel="stylesheet" href="/static/students/building/building.css">
 
     <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -69,7 +72,9 @@
     <!-- Twitter Timeline
     ================================================== -->
     <script src="/static/students/assets/js/twitter-timeline.js"></script>
-                                                            
-
+      
+    <!-- Script for filtering building sidebar -->
+    <script src="/static/students/building/sidebar-filter.js"></script>                   
+      
   </body>
 </html>
