--- a/staff/templates/staff/ConfirmSelection.html
+++ b/staff/templates/staff/ConfirmSelection.html
@@ -37,6 +37,11 @@
     <div class="container">
 
       <div class="starter-template">
+
+	<button onclick="window.history.back();" 
+		id="myButton" 
+		class="float-left submit-button" >Back</button>
+	
         <h1>Welcome to Room Selection</h1>
 	<p class="lead">{{ HeaderText }}</p>
 	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
@@ -52,8 +57,8 @@
 <div class="progress">
   <div class="progress-bar progress-bar-info progress-bar-striped" 
        role="progressbar" aria-valuenow="50" aria-valuemin="0" 
-       aria-valuemax="100" style="width:0%">
-    <font color="black">0% Complete</font>
+       aria-valuemax="100" style="width:66%">
+    <font color="black">66% Complete</font>
   </div>
 </div>
 
