--- a/staff/templates/staff/ReviewStudentInfo.html
+++ b/staff/templates/staff/ReviewStudentInfo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+e<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
@@ -9,7 +9,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Room Selection</title>
+    <title>Review a Room</title>
 
     <!-- Bootstrap core CSS -->
     <link href="/static/staff/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -33,29 +33,29 @@
 
   <body>
     {% include "staff/header.html" %}
+   
       
     <div class="container">
 
+      
+
       <div class="starter-template">
-        <h1>Welcome to Room Selection</h1>
+        <h1>Review Student Information</h1>
 	<p class="lead">{{ HeaderText }}</p>
+
 	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
-	{% for field in form %}
-		<p> {{field.label}} {{field}}</p>
-	{% endfor %}	
-	
-	</p>
+	{{form.as_p}}
 	<button type="submit" class="save btn btn-default">Save</button>
 	</form>
       </div>
 
-<div class="progress">
-  <div class="progress-bar progress-bar-info progress-bar-striped" 
-       role="progressbar" aria-valuenow="50" aria-valuemin="0" 
-       aria-valuemax="100" style="width:0%">
-    <font color="black">0% Complete</font>
-  </div>
-</div>
+      <div class="progress">
+	<div class="progress-bar progress-bar-info progress-bar-striped" 
+	     role="progressbar" aria-valuenow="50" aria-valuemin="0" 
+	     aria-valuemax="100" style="width:50%">
+	  <font color="black">50% Complete</font>
+	</div>
+      </div>
 
     </div><!-- /.container -->
 
@@ -67,7 +67,6 @@
     <script>window.jQuery || document.write('<script src="/static/staff/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/static/staff/RoomSelect/buildingRoomsFilter.js"></script>
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
   </body>
 </html>
