--- a/staff/templates/staff/RoomSelect.html
+++ b/staff/templates/staff/RoomSelect.html
@@ -39,9 +39,13 @@
       <div class="starter-template">
         <h1>Welcome to Room Selection</h1>
 	<p class="lead">{{ HeaderText }}</p>
-	<form method="POST" class="post-form" action="{{Action}}">{% csrf_token %}
+	<form method="POST" class="post-form form-horizontal" action="{{Action}}">{% csrf_token %}
 	{% for field in form %}
-		<p> {{field.label}} {{field}}</p>
+        
+		<div class="form-group"> 
+            <label for="FormInput" class = "control-label">{{field.label}} </label>
+            {{field}}
+        </div>
 	{% endfor %}	
 	
 	</p>
@@ -67,7 +71,12 @@
     <script>window.jQuery || document.write('<script src="/static/staff/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js">
+    </script>
+    
+    <!-- Our own scripts -->
     <script src="/static/staff/RoomSelect/buildingRoomsFilter.js"></script>
-    <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
-  </body>
+    <script src="/static/staff/RoomSelect/addFormControlToInputs.js"></script>
+
+    </body>
 </html>
