--- a/staff/templates/staff/StudentInfo.html
+++ b/staff/templates/staff/StudentInfo.html
@@ -118,7 +118,10 @@
     <script>window.jQuery || document.write('<script src="/static/staff/assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="/../static/staff/dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="/static/staff/RoomSelect/togglePullForm.js"></script>
     <script src="/static/staff/assets/js/ie10-viewport-bug-workaround.js"></script>
+
+    <!-- Our Scripts -->
+    <script src="/static/staff/RoomSelect/togglePullForm.js"></script>
+    <script src="/static/staff/RoomSelect/addFormControlToInputs.js"></script>
   </body>
 </html>
